--- a/public/Login/Register/styles.css
+++ b/public/Login/Register/styles.css
@@ -20,8 +20,8 @@ h1 {
 	color: #00ccff;
 	font-size: 48px;
 	text-shadow: 1px 2px 4px #000;
+	margin-top: 0px;
 }
-
 
 input {
 	border: 0;
@@ -62,4 +62,20 @@ button {
 .register:hover {
 	background: #4ddbff;
 	cursor: pointer; 
+}
+
+.back {
+	border: 0;
+	position: absolute;
+	right: 5px;
+	margin: 25px;
+	height: 40px;
+	width: 80px;
+	border-radius: 5px;
+	background: #39e600;
+}
+
+.back:hover {
+	cursor: pointer;
+	background: #53ff1a;
 }
